feat(jals-config): replace `[package] edition` with additive `features`
Model Java language features the Cargo-features way: `[package] features`
lists release presets (`java8`…`java25`) and individual constructs
(`module-imports`, `compact-source-files`) side by side, closed under
`Feature::implies` into a `FeatureSet` bitset — a release preset implies
its predecessor plus everything it stabilized, so `java25 ⊇ java24 ⊇ …`
holds by construction and an individual feature can be opted into without
its release. This replaces the single `Edition` enum and its
version-threshold gate (`Checker::Versioned`) with a `FeatureSet` gate
(`Checker::Gated`), threaded through jals-lint, jals-cli, jals-lsp, and
jals-playground.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>